# rusty-backup

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  PLAN-ext-btrfs.md  PROJECT-SPEC.md  PROMPT-literal-path-flag.md  README.md  build.rs  config.json.example  logs-dedup.txt  macos.entitlements  rusty-backup.desktop  rusty-backup.manifest  rusty-backup.rc  test_native_dialog
.cargo-husky/hooks/: pre-commit
.github/workflows/: appliance-media.yml  ntfs-oracle.yml  release.yml
advanced-tests/: check_dratrb.rs  check_emit.rs  check_system_rsrc.rs  diff_system_rsrc.rs  dump_root_dir_raw.rs  dump_root_thread.rs  list_sysfolder.rs  repro_clone.rs  scan_max_cnid.rs  source_cat_size.rs  test_sync_mdb.rs
assets/: com.rustybackup.helper.plist  hfs_file_types.json  prodos_file_types.json
assets/icons/: icon.icns
buildroot/: build.sh  isolinux.cfg  kernel-i586.fragment  kernel.fragment  make-grub-floppy.sh  package-pxe.sh
crusty-backup/: .gitignore  Makefile  README.md  mkmedia.sh  run-dosbox.sh
crusty-backup/media/: DOSLFN-ATTRIBUTION.md  DOSLFN.COM  cbdos-autoexec.bat  cbdos-fdconfig.sys  net.bat  netisa.bat
crusty-backup/net/: MTCP.CFG  NET.BAT  README.md  WATTCP.CFG  build-watt32-src.sh  fetch-drivers.sh  fetch-mtcp.sh  fetch-watt32.sh  watt32-syserr.c
crusty-backup/src/: cbbackup.c  cbbrowse.h  cbclone.c  cbcodec.c  cbcodec.h  cbdefrag.c  cbdefrag.h  cbdisk.c  cbdisk.h  cbmanifest.c  cbmanifest.h  cbnet.c  cbnet.h  cbntfs.c  cbntfs.h  cbrestore.c  cbswap.c  cbswap.h  cmd_backup.c  cmd_browse.c  cmd_clone.c  cmd_inspect.c  cmd_netdetect.c  cmd_restore.c  crustybk.c  disk_spike.c  lfn_test.c  net_hello.c  net_put.c
docker/: README.md  buildroot-appliance.Dockerfile  cb-dos.Dockerfile  cross-i486.Dockerfile  cross-i586-musl.Dockerfile  cross-i586.Dockerfile
docs/: BUILD-AGENT-ARM64.md  CONFIGURATION.md  LAZY_BROWSE.md  MAC_CODE_SIGNING.md  OPEN-WORK.md  PROMPT-ntfs-cleanroom-formatter.md  RESUME-PROMPT.md  RESUME-cedar-disk-consistency.md  SGI_Filesystems.md  SGI_Filesystems_irix_sb.txt  TODO-BTRFS-TRIMMING.md  TODO-GPT.md  TODO_missing_features.md  WINDOWS-TESTING-QUICKSTART.md  WINDOWS-WRITE.md  X68000_HDD_BUILDER_HANDOFF.md  additional_nix_filesystems.md  amiga_resize.md  amiga_support.md  apple2_floppy_formats.md  appliance_deployables_handoff.md  appliance_hardware_support.md  basilisk_hfv.md  bug_binhex_finder_flags.md  bug_type_creator_fidelity.md  cb_dos.md  cb_dos_net_resume.md  cb_dos_network_and_state.md  cb_dos_networking.md  cb_dos_resume.md  cb_dos_todo.md  cedar_boot_fixture.md  chd_native.md  chdman_replacement.md  cli-cookbook.md  cli-examples.md  cli-reference.md  cli-todo.md  codecleanup.md  commander_mode.md  (+53 more)
docs/cli-html-help/: api-apm-info.html  api-apm.html  api-hfs-get.html  api-hfs-info.html  api-hfs-ls.html  api-hfs-new.html  api-hfs-put-boot.html  api-hfs-put-zero.html  api-hfs-put.html  api-hfs-rm.html  api-hfs-validate.html  api-hfs.html  api-sgi-shrink.html  api-sgi.html  api.html  backup.html  batch-template.html  batch.html  bless.html  chmeta.html  completions.html  config-init.html  config-path.html  config-show.html  config.html  convert.html  expand.html  fsck.html  get.html  grow.html  index.html  inspect.html  install-completions.html  ls.html  mkdir.html  new.html  optical-browse.html  optical-convert.html  optical-extract.html  optical-rip.html  (+23 more)
example/: README.md  check_blank.rs  check_catalog_index.rs  check_cnid.rs  decrypt_real_imz.rs  dump_blank_mdb.rs  dump_catalog_leaf.rs  fsck_bare.rs  fsck_expanded.rs  generate_cli_html_help.rs  generate_cli_reference.rs  generate_manpage.rs  probe_hfs_btree.rs  test_clone_fix.rs
examples/: adfs_dr_root_scout.rs  adfs_fsm_probe.rs  adfs_hd_zone_scout.rs  adfs_probe.rs  atari_xcheck.rs  build_human68k_fixture.rs  build_x68k_hdd.rs  cbm_xcheck.rs  chd_smoke.rs  commander_mock.rs  craft_dirty_journal.rs  d88_encode.rs  d88_scout.rs  dump_chd_first.rs  dump_journal.rs  edsk_flat.rs  fsck_amiga.rs  gho_boot_probe.rs  gho_diff_ground_truth.rs  gho_dump_records.rs  gho_dump_sentinels.rs  gho_dump_tree.rs  gho_export_raw.rs  gho_find_attrlist.rs  gho_hive_splice.rs  gho_mft_fragments.rs  gho_ntfs_bitmap.rs  gho_ntfs_damaged.rs  gho_ntfs_gap_audit.rs  gho_ntfs_index_overlap.rs  gho_ntfs_probe_root.rs  gho_ntfs_probe_runs.rs  gho_ntfs_scope.rs  gho_ntfs_seq_probe.rs  gho_ntfs_used.rs  gho_ntfs_validate.rs  gho_record_histogram.rs  gho_scan_partitions.rs  make_blank_apm_hfs.rs  make_blank_exfat.rs  (+23 more)
installer/: README.md  rusty-backup.iss
mister/: install.sh  rb-daemon.sh
ppc-tiger/: Info.plist  README.md  build.sh  malloc_wrapper.c  probe-unix-svr2.sh  rust_cli_real.c  rust_runtime_v2.c  rusty_backup_gui.c  test_fs_readers.sh
scripts/: README.md  add-transparency.sh  build-macos.sh  build_atom_vhd.sh  compress_atom_anchors.sh  compress_cpc_anchor.sh  compress_mister_anchors.sh  create_hfs.sh  create_test_fixtures.sh  extract-gho.ps1  generate-ahdi-fixture.sh  generate-atarist-fixtures.sh  generate-cpm-fixture.sh  generate-d88-fixture.sh  generate-icon.sh  generate-jfs-fixtures.sh  generate-pcw-fixture.sh  generate-reiserfs-fixtures.sh  generate-ufs-fixtures.sh  ntfs-oracle.sh  probe-jfs-ait.py  probe-jfs-allocation.py  probe-jfs-bmap.py  probe-jfs-dtree.py  probe-jfs-fileset.py  probe-jfs-sb.py  probe-ufs-dinode.py  probe-ufs-dir.py  xfs-oracle.sh
src/: bulk_buf_reader.rs  cli.rs  device.rs  error.rs  lib.rs  main.rs  update.rs
targets/: i486-unknown-linux-gnu.json
tests/: atarist_e2e.rs  cbm_g64.rs  cbm_g71.rs  cli_altair.rs  cli_archie.rs  cli_atari800.rs  cli_atarist.rs  cli_bbcmicro.rs  cli_cbm.rs  cli_coco.rs  cli_coco_os9.rs  cli_cpm_floppy.rs  cli_dragon.rs  cli_flat.rs  cli_help_snapshot.rs  cli_hfs.rs  cli_literal_paths.rs  cli_macplus_appleii.rs  cli_sgi_hdd.rs  cli_x68000.rs  cp_engine.rs  cpc_e2e.rs  cpm_e2e.rs  daemon_service.rs  filesystem_e2e.rs  floppy_container_roundtrip.rs  hfsplus_journal_e2e.rs  macplus_mfs_e2e.rs  pcw_e2e.rs  ql_resize.rs  remote_filesystem.rs  remote_optical.rs  wave2_dispatch_e2e.rs  x68000_resize.rs
(+445 files in other folders)
