[package]
name = "rusty-backup"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["Dani <dani@funkervogt.com>"]
description = "Cross-platform GUI for backing up and restoring vintage computer hard disk images"
homepage = "https://github.com/dani/rusty-backup"
repository = "https://github.com/dani/rusty-backup"
resolver = "2"
default-run = "rusty-backup"

# Main GUI binary
[[bin]]
name = "rusty-backup"
path = "src/main.rs"

# Headless CLI binary — scripted image construction, no eframe dependency.
[[bin]]
name = "rb-cli"
path = "src/bin/rb_cli.rs"

[[example]]
name = "probe_hfs_btree"
path = "example/probe_hfs_btree.rs"

[[example]]
name = "test_clone_fix"
path = "example/test_clone_fix.rs"

[[example]]
name = "fsck_bare"
path = "example/fsck_bare.rs"

[[example]]
name = "generate_manpage"
path = "example/generate_manpage.rs"

[[example]]
name = "generate_cli_reference"
path = "example/generate_cli_reference.rs"

[features]
default = []

[dependencies]
eframe = { version = "0.34", features = ["glow"] }
egui = "0.34"
rfd = { version = "0.17", default-features = false, features = ["gtk3"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
byteorder = "1"
log = "0.4"
env_logger = "0.11"
libchdman-rs = { git = "https://github.com/danifunker/libchdman-rs" }
zstd = "0.13"
zeekstd = "0.6"
sha2 = "0.11"
crc32c = "0.6"
crc32fast = "1"
chrono = "0.4"
tempfile = "3"
image = "0.25"
reqwest = { version = "0.13", features = ["blocking", "json"] }
webbrowser = "1.0"
dirs = "6"
unicode-normalization = "0.1"
flate2 = "1"
bzip2 = "0.6"
base64 = "0.22"
opticaldiscs = { git = "https://github.com/danifunker/opticaldiscs-rs", features = ["drives"] }
cd-da-reader = { git = "https://github.com/danifunker/rust-cd-da-reader", branch = "add-data-support-0-4-1" }
serde_yml = "0.0.12"
csv = "1"
clap_complete = "4"
clap_mangen = "0.2"
globset = "0.4"
rustyline = { version = "18.0.0", features = ["with-file-history"] }
shell-words = "1.1.1"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.31", features = ["fs", "mount", "user"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-io-kit = { version = "0.3", default-features = false, features = ["libc", "pwr_mgt"] }
objc2-disk-arbitration = { version = "0.3", default-features = false, features = ["DASession", "DADisk", "DADissenter", "libc"] }
objc2-core-foundation = { version = "0.3", features = ["CFString", "CFDictionary", "CFNumber", "CFRunLoop", "CFURL"] }
objc2-foundation = { version = "0.3", features = ["NSBundle", "NSString"] }
# Note: Removed xpc-sys and objc2-service-management - using Unix sockets instead of XPC

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Ioctl",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry",
    "Win32_System_Power",
] }

[build-dependencies]
embed-resource = "3"
winres = "0.1"

[dev-dependencies]
cargo-husky = { version = "1.5.0", features = ["user-hooks"] }

# Debian package metadata
[package.metadata.deb]
maintainer = "Dani <dani@funkervogt.com>"
copyright = "2025-2026, Dani <dani@funkervogt.com>"
license-file = ["LICENSE", "0"]
extended-description = """\
Rusty Backup is a cross-platform GUI application for backing up and restoring \
vintage computer hard disk images with partition resizing and CHD compression. \
Target users are retro computing enthusiasts backing up CF/SD cards from DOS, \
Windows 9x, and early Linux systems."""
section = "utils"
priority = "optional"
assets = [
    ["target/release/rusty-backup", "usr/bin/", "755"],
    ["rusty-backup.desktop", "usr/share/applications/", "644"],
    ["assets/icons/icon-256.png", "usr/share/icons/hicolor/256x256/apps/rusty-backup.png", "644"],
    ["assets/icons/icon-128.png", "usr/share/icons/hicolor/128x128/apps/rusty-backup.png", "644"],
    ["assets/icons/icon-64.png", "usr/share/icons/hicolor/64x64/apps/rusty-backup.png", "644"],
    ["assets/icons/icon-48.png", "usr/share/icons/hicolor/48x48/apps/rusty-backup.png", "644"],
    ["assets/icons/icon-32.png", "usr/share/icons/hicolor/32x32/apps/rusty-backup.png", "644"],
    ["assets/icons/icon-16.png", "usr/share/icons/hicolor/16x16/apps/rusty-backup.png", "644"],
]
depends = "$auto, libgtk-3-0, libssl3"

# RPM package metadata
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rusty-backup", dest = "/usr/bin/rusty-backup", mode = "755" },
    { source = "rusty-backup.desktop", dest = "/usr/share/applications/rusty-backup.desktop", mode = "644" },
    { source = "assets/icons/icon-256.png", dest = "/usr/share/icons/hicolor/256x256/apps/rusty-backup.png", mode = "644" },
    { source = "assets/icons/icon-128.png", dest = "/usr/share/icons/hicolor/128x128/apps/rusty-backup.png", mode = "644" },
    { source = "assets/icons/icon-64.png", dest = "/usr/share/icons/hicolor/64x64/apps/rusty-backup.png", mode = "644" },
    { source = "assets/icons/icon-48.png", dest = "/usr/share/icons/hicolor/48x48/apps/rusty-backup.png", mode = "644" },
    { source = "assets/icons/icon-32.png", dest = "/usr/share/icons/hicolor/32x32/apps/rusty-backup.png", mode = "644" },
    { source = "assets/icons/icon-16.png", dest = "/usr/share/icons/hicolor/16x16/apps/rusty-backup.png", mode = "644" },
]
[package.metadata.generate-rpm.requires]
gtk3 = "*"
openssl = "*"

# Arch package metadata
[package.metadata.aur]
depends = ["gtk3", "openssl"]

