[package]
name = "rusty-backup"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["Dani <dani@funkervogt.com>"]
description = "Cross-platform GUI for backing up and restoring vintage computer hard disk images"
homepage = "https://github.com/dani/rusty-backup"
repository = "https://github.com/dani/rusty-backup"
resolver = "2"
default-run = "rusty-backup"

# Main GUI binary — requires the `gui` feature (off in --no-default-features
# rb-cli-mini builds so the eframe / egui / rfd dep tree doesn't enter the
# link line on slim/cross-compiled targets like armv7 MiSTer).
[[bin]]
name = "rusty-backup"
path = "src/main.rs"
required-features = ["gui"]

# Headless CLI binary — scripted image construction, no eframe dependency.
# Builds against all three optional features by default (so the desktop
# release ships the same binary), but `cargo build --bin rb-cli
# --no-default-features` produces an `rb-cli-mini` artifact that skips the
# GUI dep tree, libchdman, and the optical-disc stack — see docs/mister_cli.md.
[[bin]]
name = "rb-cli"
path = "src/bin/rb_cli.rs"

[[example]]
name = "probe_hfs_btree"
path = "example/probe_hfs_btree.rs"

[[example]]
name = "test_clone_fix"
path = "example/test_clone_fix.rs"

[[example]]
name = "fsck_bare"
path = "example/fsck_bare.rs"

[[example]]
name = "generate_manpage"
path = "example/generate_manpage.rs"

[[example]]
name = "generate_cli_reference"
path = "example/generate_cli_reference.rs"

[[example]]
name = "generate_cli_html_help"
path = "example/generate_cli_html_help.rs"

[[example]]
name = "decrypt_real_imz"
path = "example/decrypt_real_imz.rs"

# Throwaway visual mock for the planned Commander Mode UI (docs/commander_mode.md).
# Needs eframe/egui, so it is gated behind `mock_gui` to keep the default
# `cargo build --examples` (no GUI deps) from trying to compile it.
[[example]]
name = "commander_mock"
path = "examples/commander_mock.rs"
required-features = ["mock_gui"]

[features]
# The desktop release ships every feature on. The slim rb-cli-mini build is
# `cargo build --bin rb-cli --no-default-features` (optionally `--features chd`
# / `--features optical` if you want one of those without the GUI).
default = ["gui", "chd", "optical", "native-zlib", "native-zstd", "remote"]
# Pull in eframe / egui / rfd plus the update-checker's reqwest client. Also
# pulls in `remote` (dep-free) so Commander Mode's remote pane is always present
# in a GUI build.
gui = ["dep:eframe", "dep:egui", "dep:rfd", "dep:reqwest", "dep:webbrowser", "remote"]
# Fast C zlib (zlib-ng) for flate2. The always-on baseline is flate2's pure-Rust
# `rust_backend` (miniz_oxide); this feature overrides it with the C backend for
# desktop perf. Leave it OFF for the slim/cross builds (rb-cli-mini, i586/i486
# Linux, armv7/MiSTer) so flate2 stays pure Rust — no zlib-ng C cross-compile.
native-zlib = ["flate2/zlib-ng"]
# zstd backend selection (exactly one must be on; `native-zstd` is in `default`).
# `native-zstd` = the C libzstd (zstd + zeekstd crates), fast, for the desktop.
# `pure-zstd`   = the pure-Rust, bit-exact `libzstd-bitexact-rs` for slim/cross
# builds (i586/i486 Linux, armv7/MiSTer) — no C zstd to cross-compile. Bit-exact
# means a backup made by either backend is byte-identical, so the two are
# interchangeable. Slim build: `--no-default-features --features pure-zstd`.
# The seekable-zstd cache (zeekstd) is C-only; the pure path full-decompresses
# such caches to a tempfile instead of seeking. See docs/linux_486_build.md.
native-zstd = ["dep:zstd", "dep:zeekstd"]
pure-zstd = ["dep:libzstd-bitexact-rs"]
# eframe + egui only (no rfd/reqwest), used by the throwaway Commander Mode
# layout mock: `cargo run --example commander_mock --features mock_gui`.
mock_gui = ["dep:eframe", "dep:egui"]
# MAME CHD core. Prebuilt binary not available for armv7-linux — leave this
# off for MiSTer cross-compiles. ADFS / QXL.WIN / .d88 / .adf / .hdf / .vhd /
# .img / .zst all still work without it.
chd = ["dep:libchdman-rs"]
# Physical optical-drive I/O (rip / data-track read). MiSTer has no optical
# drive; leaving this off also drops a libcdio Buildroot dep.
optical = ["dep:opticaldiscs", "dep:cd-da-reader"]
# Network daemon + client (`rb-cli serve` and `rb://host:port/img@N` refs).
# Pure std::net + serde_json (both always-on), so this adds NO new dependency
# and is cheap to keep on for the slim/MiSTer build (`--features remote`).
# Phase 0 = Family F read-only (browse + read). See docs/remote_transfer_plan.md.
remote = []

[dependencies]
# Optional, gated behind feature flags. See [features] above.
eframe = { version = "0.34", features = ["glow"], optional = true }
egui = { version = "0.34", optional = true }
rfd = { version = "0.17", default-features = false, features = ["gtk3"], optional = true }
libchdman-rs = { version = "0.288.5", features = ["prebuilt"], optional = true }
# rustls-tls keeps reqwest off openssl-sys so the gui-feature build doesn't drag
# in OpenSSL native libs; the cross/armv7 path doesn't need reqwest at all
# (it's behind `gui`).
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"], optional = true }
webbrowser = { version = "1.0", optional = true }
opticaldiscs = { version = "0.4.2", features = ["drives"], optional = true }
cd-da-reader = { git = "https://github.com/danifunker/rust-cd-da-reader", branch = "add-data-support-0-4-1", optional = true }

# Always-on dependencies — used by rb-cli (mini included).
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
byteorder = "1"
# Shift-JIS <-> UTF-8 for Human68k (Sharp X68000) filenames.
encoding_rs = "0.8"
log = "0.4"
env_logger = "0.11"
# zstd backend — exactly one of native-zstd / pure-zstd selects these. See the
# [features] section. C libzstd (fast, desktop) vs pure-Rust bit-exact (cross).
zstd = { version = "0.13", optional = true }
zeekstd = { version = "0.6", optional = true }
libzstd-bitexact-rs = { version = "0.157", optional = true }
sha2 = "0.11"
md-5 = "0.11"
sha1 = "0.11"
aes = "0.9"
cbc = "0.2"
crc32c = "0.6"
crc32fast = "1"
chrono = "0.4"
tempfile = "3"
image = "0.25"
dirs = "6"
unicode-normalization = "0.1"
# Baseline is the pure-Rust backend (miniz_oxide) so the slim/cross builds need
# no C zlib. The desktop `native-zlib` feature adds `flate2/zlib-ng`, which
# flate2 prioritizes over the Rust backend when both are enabled.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
tar = "0.4"
bzip2 = "0.6"
zip = { version = "8", default-features = false, features = ["deflate", "aes-crypto"] }
base64 = "0.22"
serde_yml = "0.0.13"
csv = "1"
clap_complete = "4"
clap_mangen = "0.3"
globset = "0.4"
rustyline = { version = "18.0.0", features = ["with-file-history"] }
crossterm = "0.28"
shell-words = "1.1.1"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.31", features = ["fs", "mount", "user"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-io-kit = { version = "0.3", default-features = false, features = ["libc", "pwr_mgt"] }
objc2-disk-arbitration = { version = "0.3", default-features = false, features = ["DASession", "DADisk", "DADissenter", "libc"] }
objc2-core-foundation = { version = "0.3", features = ["CFString", "CFDictionary", "CFNumber", "CFRunLoop", "CFURL"] }
objc2-foundation = { version = "0.3", features = ["NSBundle", "NSString"] }
# Note: Removed xpc-sys and objc2-service-management - using Unix sockets instead of XPC

[target.'cfg(target_os = "windows")'.dependencies]
# In-app self-update: replaces the running .exe in place, handling the
# Windows locked-running-image problem. See docs/windows_self_update.md.
self-replace = "1"
# Per-user file-association registration (HKCU\Software\Classes).
winreg = "0.56"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Ioctl",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry",
    "Win32_System_Power",
] }

[build-dependencies]
winres = "0.1"

[dev-dependencies]
cargo-husky = { version = "1.5.0", features = ["user-hooks"] }
# Verify the bundled CJK font actually covers Japanese (same parser egui uses).
ab_glyph = "0.2"

# Debian package metadata
[package.metadata.deb]
maintainer = "Dani <dani@funkervogt.com>"
copyright = "2025-2026, Dani <dani@funkervogt.com>"
license-file = ["LICENSE", "0"]
extended-description = """\
Rusty Backup is a cross-platform GUI application for backing up and restoring \
vintage computer hard disk images with partition resizing and CHD compression. \
Target users are retro computing enthusiasts backing up CF/SD cards from DOS, \
Windows 9x, and early Linux systems."""
section = "utils"
priority = "optional"
assets = [
    ["target/release/rusty-backup", "usr/bin/", "755"],
    ["rusty-backup.desktop", "usr/share/applications/", "644"],
    ["assets/icons/icon-256.png", "usr/share/icons/hicolor/256x256/apps/rusty-backup.png", "644"],
    ["assets/icons/icon-128.png", "usr/share/icons/hicolor/128x128/apps/rusty-backup.png", "644"],
    ["assets/icons/icon-64.png", "usr/share/icons/hicolor/64x64/apps/rusty-backup.png", "644"],
    ["assets/icons/icon-48.png", "usr/share/icons/hicolor/48x48/apps/rusty-backup.png", "644"],
    ["assets/icons/icon-32.png", "usr/share/icons/hicolor/32x32/apps/rusty-backup.png", "644"],
    ["assets/icons/icon-16.png", "usr/share/icons/hicolor/16x16/apps/rusty-backup.png", "644"],
]
depends = "$auto, libgtk-3-0, libssl3"

# RPM package metadata
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rusty-backup", dest = "/usr/bin/rusty-backup", mode = "755" },
    { source = "rusty-backup.desktop", dest = "/usr/share/applications/rusty-backup.desktop", mode = "644" },
    { source = "assets/icons/icon-256.png", dest = "/usr/share/icons/hicolor/256x256/apps/rusty-backup.png", mode = "644" },
    { source = "assets/icons/icon-128.png", dest = "/usr/share/icons/hicolor/128x128/apps/rusty-backup.png", mode = "644" },
    { source = "assets/icons/icon-64.png", dest = "/usr/share/icons/hicolor/64x64/apps/rusty-backup.png", mode = "644" },
    { source = "assets/icons/icon-48.png", dest = "/usr/share/icons/hicolor/48x48/apps/rusty-backup.png", mode = "644" },
    { source = "assets/icons/icon-32.png", dest = "/usr/share/icons/hicolor/32x32/apps/rusty-backup.png", mode = "644" },
    { source = "assets/icons/icon-16.png", dest = "/usr/share/icons/hicolor/16x16/apps/rusty-backup.png", mode = "644" },
]
[package.metadata.generate-rpm.requires]
gtk3 = "*"
openssl = "*"

# Arch package metadata
[package.metadata.aur]
depends = ["gtk3", "openssl"]
